--- a/CoolBooks/Views/Books/Delete.cshtml
+++ b/CoolBooks/Views/Books/Delete.cshtml
@@ -116,7 +116,7 @@
     
             <div class="form-actions no-color">
                 <input type="submit" value="Delete" class="btn btn-primary" /> |
-                @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " }})
+                @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " })
             </div>
         }
     </div>
