--- a/CoolBooks/Views/AspNetUsers/SignUp.cshtml
+++ b/CoolBooks/Views/AspNetUsers/SignUp.cshtml
@@ -1,5 +1,5 @@
 ﻿@model CoolBooks.Models.AspNetUsers
-
+@using CaptchaMvc.HtmlHelpers
 
 @{
     ViewBag.Title = "Sign up";
@@ -7,23 +7,19 @@
 
 <h2>Sign up</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Create a new account</h4>
+    <div class="form-horizontal">
+        <h4>Sign up for a new account</h4>
+        <p class="text-danger">
+            @ViewBag.ErrMessage
+        </p>
+    </div>
+
     <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    *@
+
     <div class="form-group">
         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -32,61 +28,17 @@
         </div>
     </div>
 
-
-
-
-
-    @*
-            <div class="form-group">
-                @Html.LabelFor(model => model.EmailConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.EmailConfirmed)
-                        @Html.ValidationMessageFor(model => model.EmailConfirmed, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-
-
-
-        <div class="form-group">
-
-
-                @Html.LabelFor(model => model.PasswordHash, "Password", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PasswordHash, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    *@
-
     <div class="form-group">
-        @Html.LabelFor(model => model.PasswordHash, "Password", htmlAttributes: new { @class = "control-label col-md-2" })
-        @Html.TextBox("Password", "", new { @class = "form-control" })
-
+        * @Html.LabelFor(model => model.PasswordHash, "Password", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Password("Password", "", new { @class = "form-control" })
     </div>
 
-
-
+    <div class="form-group">
+        @Html.LabelFor(model => model.PasswordHash, "Validate Password", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Password("Password2", "", new { @class = "form-control" })
+    </div>
 
     @*
-        <div class="form-group">
-            @Html.LabelFor(model => model.PasswordHash, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PasswordHash, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.SecurityStamp, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.SecurityStamp, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.SecurityStamp, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -95,52 +47,8 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.PhoneNumberConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.PhoneNumberConfirmed)
-                        @Html.ValidationMessageFor(model => model.PhoneNumberConfirmed, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.TwoFactorEnabled, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.TwoFactorEnabled)
-                        @Html.ValidationMessageFor(model => model.TwoFactorEnabled, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.LockoutEndDateUtc, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LockoutEndDateUtc, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LockoutEndDateUtc, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.LockoutEnabled, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.LockoutEnabled)
-                            @Html.ValidationMessageFor(model => model.LockoutEnabled, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.AccessFailedCount, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.AccessFailedCount, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.AccessFailedCount, "", new { @class = "text-danger" })
-                    </div>
-                </div>
     *@
+
     <div class="form-group">
         @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -149,17 +57,13 @@
         </div>
     </div>
 
-    @using CaptchaMvc.HtmlHelpers
     @Html.MathCaptcha()
     @ViewBag.ErrorMessage
-
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Sign up" class="btn btn-default" />
         </div>
     </div>
-</div>
 
 }
-
