--- a/CoolBooks/Views/Home/Login.cshtml
+++ b/CoolBooks/Views/Home/Login.cshtml
@@ -1,42 +1,44 @@
-﻿@{
-    ViewBag.Title = "Login";
+﻿@model CoolBooks.Models.AspNetUsers
+@using CaptchaMvc.HtmlHelpers
+
+@{
+    ViewBag.Title = "Log in";
 }
 
-<div class="jumbotron">
-    <h1>CoolBooks</h1>
-    <p class="lead">Welcome to CoolBooks! Here you can find books that you <strong>will</strong> want to read</p>
-    <p>Registered users can add books and reviews. Our administrators are experts on books. They constantly remove books. That is our strength, because here you will only find <strong>really</strong> cool books.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<h2>Log in</h2>
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+<div class="form-horizontal">
+    <h4>Login in to your account</h4>
+    <p class="text-danger">
+        @ViewBag.ErrMessage
+    </p>
 </div>
 
+<hr />
 
-<h1> Login </h1>
+<div class="form-group">
+    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+    </div>
+</div>
 
-<form>
+<div class="form-group">
+    @Html.LabelFor(model => model.PasswordHash, "Password", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.Password("Password", "", new { @class = "form-control" })
+    </div>
+</div>
 
-    Username <input type='text' name='username'> <br>
-    Password <input type='password' name='password'> <br>
-    <input type='button' value='login'>
-</form>
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <input type="submit" value="Log in" class="btn btn-primary" />
+    </div>
+</div>
 
-    @*<div class="row">
-            <div class="col-md-4">
-                <h2>Getting started home page adams testing</h2>
-                <p>
-                    ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                    enables a clean separation of concerns and gives you full control over markup
-                    for enjoyable, agile development.
-                </p>
-                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Get more libraries</h2>
-                <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Web Hosting</h2>
-                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-            </div>
-        </div>*@
+}
