ISBN function on autofill button

--- a/CoolBooks/Views/Home/Index.cshtml
+++ b/CoolBooks/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CoolBooks.Models
 @model IEnumerable<CoolBooks.Models.Books>
+    @{ 
+        Books bk = ViewData["Books"] as Books;
+    }
 
 <html>
 <head>
@@ -16,7 +19,42 @@
         <p>Registered users can add books and reviews. Our administrators are experts on books. They constantly remove books. That is our strength, because here you will only find <strong>really</strong> cool books.</p>
         <p><a href="https://en.wikipedia.org/wiki/Book" target="_blank" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
-    
+
+    <table class="table table-striped" border="0">
+        <tr rowspan="2">
+            <td>
+                <img src=@bk.ImagePath alt="Image not Available" width="200" height="200" />
+            </td>
+            <td>
+
+                <table class="table table-striped" border="0">
+                    <tr>
+                        <td> Title</td>
+                        <td>@bk.Title</td>
+
+                    </tr>
+                    <tr>
+                        <td> Description</td>
+                        <td>@bk.Description</td>
+
+                    </tr>
+                    <tr>
+                        <td>  Author</td>
+                        <td> @bk.Authors.FirstName</td>
+
+                    </tr>
+                    <tr>
+                        <td>  Genres</td>
+                        <td> @bk.Genres.Name</td>
+
+                    </tr>
+                </table>
+            </td>
+
+        </tr>
+        </table>
+
+
         <div class="row">
             @{
                 var counter = 1;
@@ -31,8 +69,8 @@
                     <img src=@item.ImagePath alt="Image not Available" width="200" height="200" />
                     <br /><span style="color:#00bfff; font-weight: bold; text-transform: uppercase; font-size:15px;">@Html.DisplayFor(modelItem => item.Authors.FirstName) @Html.DisplayFor(modelItem => item.Authors.LastName)</span>
                     <br />
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
-                    @Html.ActionLink("View", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
+                    @Html.ActionLink("Edit", "../Books/Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
+                    @Html.ActionLink("View", "../Books/Details", new { id = item.Id }, new { @class = "btn btn-primary " })
 
                 </div>
                 <br />
@@ -40,12 +78,12 @@
                 {
                     @:</div><div class="row">
                     counter = 0;
-                    }
-                    counter++;
+                }
+                counter++;
 
-                    }
+            }
 
-                </div>
-    
+        </div>
+
 </body>
     </html>
