--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -33,10 +33,11 @@
                     <li>@Html.ActionLink("Books", "Create", "Books")</li>
                     <li>@Html.ActionLink("Authors", "Create", "Authors")</li>
                     <li>@Html.ActionLink("Genres", "Create", "Genres")</li>
-                    @if(@Session["UserInfo"]!=null)
-                    { 
-                    <li style="color:white">@Session["UserName"]</li>
-                    }
+                    @if (@Session["UserInfo"] != null)
+    {
+                    <li>@Html.ActionLink("Welcome " + @Session["UserName"], null,null, new { @class = "btn btn-primary " })</li>
+                
+}
                 </ul>
             </div>
         </div>
