--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                     <li>@Html.ActionLink("Books", "Create", "Books")</li>
                     <li>@Html.ActionLink("Authors", "Create", "Authors")</li>
                     <li>@Html.ActionLink("Genres", "Create", "Genres")</li>
+                    <li>@Html.ActionLink("Search", "Index", "Search")</li>
                 </ul>
             </div>
         </div>
