--- a/CoolBooks/Views/AspNetUsers/SignUp.cshtml
+++ b/CoolBooks/Views/AspNetUsers/SignUp.cshtml
@@ -64,7 +64,7 @@
     <div class="form-group">
         <div class="col-md-10">
             <table border="0" style="margin-left:185px">
-                <tr><td> @Html.MathCaptcha()´</td></tr>
+                <tr><td> @Html.MathCaptcha()</td></tr>
             </table>
         </div>
     </div>
