--- a/CoolBooks/Views/Home/Index.cshtml
+++ b/CoolBooks/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
         <p><a href="https://en.wikipedia.org/wiki/Book" target="_blank" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
 
+    @if(bk != null){
     <table class="table table-striped" border="0">
         <tr rowspan="2">
             <td>
@@ -53,7 +54,7 @@
 
         </tr>
         </table>
-
+    }
 
         <div class="row">
             @{
