books controller session userbname

--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -69,6 +69,11 @@
                             <td> @bk.Genres.Name</td>
 
                         </tr>
+                        <tr>
+                         
+                            <td  colspan="2"> <input type="hidden" name="TxtBookId" value=@bk.Id /></td>
+
+                        </tr>
                     </table>
                 </td>
 
