--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     {
                         <li>@Html.ActionLink("Log out", "LogOut", "Home")</li>
                     }
-                    <li>@Html.ActionLink("Books", "Create", "Books")</li>
+                    <li>@Html.ActionLink("Books", "Index", "Books")</li>
                     <li>@Html.ActionLink("Authors", "Create", "Authors")</li>
                     <li>@Html.ActionLink("Genres", "Create", "Genres")</li>
                     <li>@Html.ActionLink("Search", "Index", "Search")</li>
