--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -70,8 +70,8 @@
 
                         </tr>
                         <tr>
-                         
-                            <td  colspan="2"> <input type="hidden" name="TxtBookId" value=@bk.Id /></td>
+
+                            <td colspan="2"> <input type="hidden" name="TxtBookId" value=@bk.Id /></td>
 
                         </tr>
                     </table>
@@ -85,75 +85,83 @@
                     <table align="right" class="table table-striped" border="0">
 
                         @foreach (var reviews in rev)
-                {
-                    <tr>  <td colspan="2"><B>@reviews.UserId</B></td> </tr>
-                    <tr>
-                        <td colspan="2">
-                            @reviews.Title  @reviews.Created
+                    {
+                        <tr>  <td colspan="2"><B>@reviews.UserId</B></td> </tr>
+                        <tr>
+                            <td colspan="2">
+                                @reviews.Title  @reviews.Created
 
-                            @for (int i = 1; i < reviews.Rating; i++)
-                     {
-                    <img src="~/Images/star-fill-lg.png" height="20" />
-                     }
-                        </td>
-                    </tr>
-                   
-                    <tr><td>@reviews.Text </td><td> @Html.ActionLink("Delete", "Delete", new { id = string.Empty }, new { @class = "btn btn-primary " })</td></tr>
-                   
+                                @for (int i = 1; i < reviews.Rating; i++)
+                            {
+                                <img src="~/Images/star-fill-lg.png" height="20" />
+                        }
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>@reviews.Text </td>
+
+                            <td> @Html.ActionLink("Delete", "Delete", new { id = string.Empty }, new { @class = "btn btn-primary " })</td>
+                        </tr>
+
 
                 }
-                        
-                    <tr><td colspan="2"><B>USERNAME</B></td></tr>
-                    <tr><td colspan="2"><b>Review Title</b> </td></tr>
-                    <tr><td colspan="2"> @Html.TextBox("RevTitle") </td></tr>
+                        @if (Session["UserInfo"] != null)
+                    {
+                        <tr><td colspan="2"><B>USERNAME</B></td></tr>
+                        <tr><td colspan="2"><b>Review Title</b> </td></tr>
+                        <tr><td colspan="2"> @Html.TextBox("RevTitle") </td></tr>
 
-                    <tr>
+                        <tr>
 
-                        <td>
+                            <td>
 
-                            <span id="text-counter"> 4000 </span> character(s) left.
-                            @Html.TextArea("Comments", htmlAttributes: new { rows = "5", cols = "100", @class = "form-control", maxlength = "4000" })
-                            @*   @Html.TextArea("Review", new { maxlength = 500, style = "width:100%; height:100px;" }) </ td > *@
-                    
-                            <br />
+                                <span id="text-counter"> 4000 </span> character(s) left.
+                                @Html.TextArea("Comments", htmlAttributes: new { rows = "5", cols = "100", @class = "form-control", maxlength = "4000" })
+                                @*   @Html.TextArea("Review", new { maxlength = 500, style = "width:100%; height:100px;" }) </ td > *@
 
-                            <br />
+                                <br />
 
-
-                        <td>
-
-                            <input type="submit" name="n1" value="Save" formaction=@Url.Action("Create") formmethod="post" class="btn btn-primary" />
+                                <br />
 
 
-                        </td>
+                            <td>
 
-                    </tr>
+                                <input type="submit" name="n1" value="Save" formaction=@Url.Action("Create") formmethod="post" class="btn btn-primary" />
 
+
+                            </td>
+
+                        </tr>
+                }
                     </table>
 
-       </td>
+                </td>
 
-   </tr>
-
-
-</table>
+            </tr>
 
 
-<div class="stars">
-   <input type = "radio" name="star" class="star-1" id="star-1" value="1" />
-   <label class="star-1" for="star-1">1</label>
-   <input type = "radio" name="star" class="star-2" id="star-2" value="2" />
-   <label class="star-2" for="star-2">2</label>
-   <input type = "radio" name="star" class="star-3" id="star-3" value="3" />
-   <label class="star-3" for="star-3">3</label>
-   <input type = "radio" name="star" class="star-4" id="star-4" value="4" />
-   <label class="star-4" for="star-4">4</label>
-   <input type = "radio" name="star" class="star-5" id="star-5" value="5" />
-   <label class="star-5" for="star-5">5</label>
-   <span></span>
-</div>
+        </table>
+
+
+         if (Session["UserInfo"] != null)
+       {
+        <div class="stars">
+            <input type="radio" name="star" class="star-1" id="star-1" value="1" />
+            <label class="star-1" for="star-1">1</label>
+            <input type="radio" name="star" class="star-2" id="star-2" value="2" />
+            <label class="star-2" for="star-2">2</label>
+            <input type="radio" name="star" class="star-3" id="star-3" value="3" />
+            <label class="star-3" for="star-3">3</label>
+            <input type="radio" name="star" class="star-4" id="star-4" value="4" />
+            <label class="star-4" for="star-4">4</label>
+            <input type="radio" name="star" class="star-5" id="star-5" value="5" />
+            <label class="star-5" for="star-5">5</label>
+            <span></span>
+        </div>
 }
-</div>
+}
+    </div>
 
 <p>
   @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " })
