--- a/CoolBooks/Views/Books/Index.cshtml
+++ b/CoolBooks/Views/Books/Index.cshtml
@@ -49,8 +49,7 @@
 
             <td>
                 @Html.DisplayFor(modelItem => item.Authors.FirstName)
-                <br>
-                @Html.DisplayFor(modelItem => item.Authors.LastName)
+                
             </td>
 
             <td>
@@ -59,8 +58,9 @@
             <td>
                 @Html.ActionLink("View", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
             </td>
-
-                @*   @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-primary" }) *@
+            <td>
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-primary" })
+            </td>
         </tr>
         }
 
