--- a/CoolBooks/Views/Genres/Create.cshtml
+++ b/CoolBooks/Views/Genres/Create.cshtml
@@ -45,7 +45,7 @@
             </div>
     
             <div class="form-group">
-                @* @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                 @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     <div class="checkbox">
                         @Html.EditorFor(model => model.IsDeleted)
