aligned signup controls

--- a/CoolBooks/Views/AspNetUsers/SignUp.cshtml
+++ b/CoolBooks/Views/AspNetUsers/SignUp.cshtml
@@ -22,26 +22,27 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+
         <div class="col-md-10">
             @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
         </div>
     </div>
-
+    <div class="col-md-offset-2 col-md-10" style="height:20px"> </div>
     <div class="form-group">
         @Html.LabelFor(model => model.PasswordHash, "Password", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.Password("Password", "", new { @class = "form-control" })
         </div>
     </div>
-
+    <div class="col-md-offset-2 col-md-10" style="height:20px"> </div>
     <div class="form-group">
         @Html.LabelFor(model => model.PasswordHash, "Validate Password", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.Password("Password2", "", new { @class = "form-control" })
         </div>
     </div>
-
+    <div class="col-md-offset-2 col-md-10" style="height:20px"> </div>
     <div class="form-group">
         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -60,19 +61,21 @@
         </div>
 
     *@
-
+    <div class="col-md-offset-2 col-md-10" style="height:20px"> </div>
     <div class="form-group">
-        <div class="col-md-10">
-            <table border="0" style="margin-left:185px">
-                <tr><td> @Html.MathCaptcha()</td></tr>
-            </table>
+
+        <div class="col-md-10" style="margin-left:180px">
+
+            @Html.MathCaptcha()
+
         </div>
     </div>
+    <div class="col-md-offset-2 col-md-10" style="height:20px"> </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Sign up" class="btn btn-primary" />
         </div>
     </div>
-
+   
 }
