--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -104,9 +104,13 @@
                             <td>@reviews.Text </td>
                             @if(@Uid == @reviews.UserId)
                            {
-                        <td> <input type="submit" name="n1" value=@reviews.Id formaction=@Url.Action("Delete","Reviews") formmethod="post" class="btn btn-primary" /><img src="" alt="Delete" /></td>
-                           }
-                        </tr>
+                            <td>
+                                @*<input type="submit" id="n1" name=@reviews.Id value="Delete" formaction=@Url.Action("Delete","Reviews") formmethod="post" class="btn btn-primary" /><img src="" alt="Delete" /></td>*@
+                                <input type="hidden" name="n1" value="@reviews.Id" formaction=@Url.Action("Delete","Reviews") formmethod="post" class="btn btn-primary"/>
+                                <input type="submit" value="Delete" formaction=@Url.Action("Delete","Reviews") formmethod="post" class="btn btn-primary"/>
+                                </td>
+                                }
+</tr>
 
 
                 }
