--- a/CoolBooks/Views/Search/ViewAll.cshtml
+++ b/CoolBooks/Views/Search/ViewAll.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "ViewAll";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
 
 
@@ -53,9 +53,8 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Part)
-                </td>
+               </td>
                 <td>
-
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
