fixing stuff mousami broke for the third time today

--- a/CoolBooks/Views/Books/Create.cshtml
+++ b/CoolBooks/Views/Books/Create.cshtml
@@ -112,14 +112,16 @@
 
 
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="n1" value="Create" class="btn btn-primary" />
-                <input type="submit" name="n1" value="autofill" class="btn btn-default" />
+                
+                
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" name="n1" value="Create" class="btn btn-primary" />
+                        <input type="submit" name="n1" value="autofill" class="btn btn-primary" />
+                    </div>
+                </div>
 
 
-            </div>
-        </div>
     </div>
     }
 
