--- a/CoolBooks/Views/Users/Profile.cshtml
+++ b/CoolBooks/Views/Users/Profile.cshtml
@@ -20,7 +20,7 @@
 
     <div class="form-group">
 
-        * @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
@@ -28,7 +28,7 @@
     </div>
 
     <div class="form-group">
-        * @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
@@ -58,7 +58,6 @@
             @Html.ValidationMessageFor(model => model.Picture, "", new { @class = "text-danger" })
             <form action="/action_page.php">
                 <input type="file" name="pic" accept="image/*">
-
             </form>
         </div>
     </div>
@@ -119,9 +118,6 @@
         </div>
     </div>
 
-
-
-
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Update" class="btn btn-default" />
@@ -129,7 +125,3 @@
     </div>
 </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
